# mqtt2kafka

./: .gitignore  README.md  build.py  config.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: kafka_client.py  mqtt2kafka.py  mqtt_client.py  settings.py
app/utils/: singleton.py
src/: kafka_client.py  mqtt2kafka.py  mqtt_client.py  settings.py
src/utils/: loguru_config.py  pydantic_settings_extensions.py  singleton.py
tests/: test_kafka_client.py  test_mqtt_client.py
